--- a/site/static/main.css
+++ b/site/static/main.css
@@ -15,6 +15,9 @@ a:hover {
 ul {
   list-style-type: none;
   margin-left: -1em;
+  margin-top: 0;
+  margin-bottom: 0;
+  white-space: normal;
 }
 
 li {
@@ -38,5 +41,9 @@ li {
   color: #c7c3c4;
   vertical-align: top;
   padding-left: 20px;
+  white-space: pre-wrap;
 }
 
+.main_content {
+  white-space: pre-wrap;
+}
