--- a/static/main.css
+++ b/static/main.css
@@ -15,6 +15,9 @@ a:hover {
 ul {
   list-style-type: none;
   margin-left: -1em;
+  margin-top: 0;
+  margin-bottom: 0;
+  white-space: normal;
 }
 
 li {
@@ -32,17 +35,15 @@ li {
   width: 100%;
 }
 
-.main_content {
-  vertical-align: top;
-  padding: 5px;
-  width: 650px;
-}
-
 .parenthetical {
   width: 20%;
   font-size: 80%;
   color: #c7c3c4;
   vertical-align: top;
   padding-left: 20px;
+  white-space: pre-wrap;
 }
 
+.main_content {
+  white-space: pre-wrap;
+}
