--- a/templates/optionality.html
+++ b/templates/optionality.html
@@ -1,15 +1,24 @@
 {% extends "base.html" %}
+
 {% block title %}
 Optionality
 {% endblock title %}
 
 {% block content %}
-Options get their name because they give the option buyer the right or option to trade the underlying. The option seller, however, has an obligation. If the option holder exercises or uses his or her right, then the option seller is assigned. If the option holder does not exercise his or her right, the option expires.
+Options get their name because the option buyer gains the <b>right</b> or <b>option</b> to trade the underlying. The option seller, however, has the <b>obligation</b>.
 
-For example, suppose I sell you an option. You can exercise your option whenever you want, and I am required to fulfill my end of the contract. If you choose not to exercise your right, you can let the option expire. You, the option holder, have all the power.
-
+If the option is used:
+<ul>
+	<li>The buyer <b>exercises</b> his or her right</li>
+	<li>The seller is <b>assigned</b></li>
+</ul>
+If the option is not used:
+<ul>
+	<li>The option <b>expires</b></li>
+	<li>Neither the buyer nor seller have a position in the option anymore
+</ul>
+For example, supposed I sell you an option. You have the right to exercise your option whenever you want, and if it is exercised, I am obligated to fulfill my end of the contract. If you choose not to exercise your right, you can let the option expire. You, the option holder, have all the power.
 {% endblock content %}
 
 {% block parentheticals %}
-
 {% endblock parentheticals %}
