--- a/templates/about.html
+++ b/templates/about.html
@@ -1,13 +1,19 @@
 {% extends "base.html" %}
+
 {% block title %}
 About
 {% endblock title %}
-{% block content %}
-The purpose of this website is to educate readers about option theory. There are many existing resources on this subject; however, they often require pre-existing knowledge on financial markets. We hope this tool will teach option theory without requiring readers to consult other sources. For some of the more technical topics in this website (e.g. partial differential equations), we will give brief overviews and provide links to supplementary resources for those interested in learning more. For everyone else, this website should be sufficient to bring someone completely unfamiliar with finance up to speed with options.
 
-We are students in the Undergraduate Computational Finance (UCF) organization at The University of Texas at Austin. We created this resource to educate new members in our organization on option theory, but we hope its useful to anyone interested in options. If you find any errors, please feel free to contact us at Exec@TexasUCF.com.
+{% block content %}
+The purpose of this website is to educate readers about option theory. There are many existing resources on this subject; however, they often require pre-existing knowledge on financial markets. We hope this tool will teach option theory without requiring readers to consult other sources.
+
+For some of the more technical topics in this website (e.g. partial differential equations, geometric brownian motion, etc.), we will give brief overviews and provide links to supplementary resources for those interested in learning more. For everyone else, this website should be sufficient to bring someone completely unfamiliar with finance up to speed with options.
+
+We are students in <a href = "http://texasucf.com/">Undergraduate Computational Finance (UCF)</a>, an organization at The University of Texas at Austin. We created this resource to educate new members in our organization on option theory, but we hope its useful to anyone interested in options.
 {% endblock content %}
 
 {% block parentheticals %}
-By Chirag Agrawal, Neil Vyas, Sam Barani, and Gene Hsu for Texas UCF.
+Template and graphics primarily designed by Neil Vyas and Sam Barani. Content primarily written by Chirag Agrawal.
+
+If you find any errors, please feel free to <a href = "mailto:Exec@TexasUCF.com">email us</a> or submit a pull request in our <a href = "https://github.com/Texas-UCF/options-curriculum">GitHub repository</a>.
 {% endblock %}
