--- a/templates/calls_and_puts.html
+++ b/templates/calls_and_puts.html
@@ -5,7 +5,7 @@ Calls and Puts
 {% endblock title %}
 
 {% block content %}
-There are two types of options:
+There are two types of options<sup>1</sup>:
 <ul>
 	<li><b>Calls</b> give the owner the right to buy something</li>
 	<li><b>Puts</b> give the owner the right to sell something</li>
@@ -14,5 +14,5 @@ It's important to recognize that buying calls and buying puts do <i>not</i> give
 {% endblock content %}
 
 {% block parentheticals %}
-Calls and puts may give owners completely different rights, but eventually you'll learn that the difference is almost negligible.
+1. Calls and puts may give owners completely different rights, but eventually you'll learn that the difference is almost negligible.
 {% endblock parentheticals %}
