--- a/templates/derivatives.html
+++ b/templates/derivatives.html
@@ -5,7 +5,7 @@ Derivatives
 {% endblock title %}
 
 {% block content %}
-Options are a type of derivative. Derivatives are simply contracts or agreements between two parties. The value of derivatives is <i>derived</i> from some underlying product, as opposed to assets like stocks or bonds which represent ownership of something.
+Options are a type of derivative. Derivatives are simply contracts or agreements between two parties. The value of derivatives is <i>derived</i> from some underlying product<sup>1</sup>, as opposed to assets like stocks or bonds which represent ownership of something.
 
 Examples of derivatives in finance:
 <ul>
@@ -23,5 +23,5 @@ Examples of derivatives outside of finance:
 {% endblock content %}
 
 {% block parentheticals %}
-The underlying product for derivatives can be almost anything: stocks, indices, commodities, or even other derivatives.
+1. The underlying product for derivatives can be almost anything: stocks, indices, commodities, or even other derivatives.
 {% endblock %}
